# trader_joe

./: .dockerignore  .env.default  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  entrypoint.sh  init.sh  prod.env  pyproject.toml  requirements.test.txt
.github/workflows/: trader_joe_testing.yml
common/: app_lifecycle.py  data_lifecyle.py  endpoints.py  environment.py  logging.py  timer.py  worker_pool.py
common/database/: postgres_tools.py  sql_alchemy_nullable_datetime.py  sql_alchemy_ordered_enum.py  sql_alchemy_table.py  sql_alchemy_types.py
common/enums/: config_enum.py  data_select.py  data_stock.py  exchange_code.py  pydantic_enums.py  stock_data.py
common/kafka/: kafka_config.py  kafka_consumer.py  kafka_producer.py  kafka_rpc_factory.py  kafka_tools.py  topics.py
common/kafka/messaging/: kafka_consumer.py  kafka_producer.py
common/kafka/rpc/: kafka_rpc_base.py  kafka_rpc_client.py  kafka_rpc_server.py
common/postgres/: postgres_tools.py
common/test/: conftest.py  test_environment.py  test_worker_pool.py
common/test/database/: test_postgres_tools.py  test_sql_alchemy_table.py
common/test/fixtures/: environment.py
common/test/kafka/: test_kafka_consumer.py  test_kafka_producer.py
common/test/postgres/: test_postgres_tools.py
common/tests/: test_endpoints.py  test_worker_pool.py
common/tests/kafka/: test_kafka_producer.py
data/historical/: Dockerfile  alembic.ini  main.py  requirements.txt
data/historical/app/: main.py
data/historical/app/db/: database.py  items.py  models.py
data/historical/migrations/: env.py  reset_migrations.sh
data/historical/migrations/versions/: c4a76aececcf_initial_migration.py
data/ingest/: .env.default  requirements.txt
data/ingest/app/: app_depends.py  ingest_control.py  main.py
data/ingest/app/brokers/alpaca/: broker_api.py  broker_codes.py
data/ingest/app/brokers/alpaca/temp/: bars.json  enum_test.py  quotes.json  snapshot.json  trades.json
data/store/: .env.default  init_migrations.sh  requirements.txt  reset_migrations.sh  run_migrations.sh
data/store/app/: app_depends.py  main.py
data/store/app/database/: database.py
data/store/app/database/crud/: asset_market_activity.py  store_dataset_entry.py
data/store/app/database/crud/stock/: asset_market_activity.py  store_dataset_entry.py
data/store/app/database/models/: base_market_activity.py  stock_market_activity.py  store_dataset_entry.py
data/store/app/db/: database.py
data/store/app/db/crud/: asset_market_activity.py  stock_market_activity.py  stock_market_activity_data.py  stock_price_volume.py  store_dataset_entry.py
data/store/app/db/models/: base_market_activity.py  stock_market_activity.py  stock_market_activity_data.py  stock_price_volume.py  store_dataset_entry.py
data/store/app/ingest/: data_action_request.py
data/store/app/retrieve/: data_action_request.py
data/store/migrations/: env.py  reset_migrations.sh
data/store/migrations/versions/: 12605f5f21ed_initial_migration.py  13fc73adb286_initial_migration.py  2b88043cd13c_initial_migration.py  8d6b5a79176f_initial_migration.py  95280b9ee61e_initial_migration.py  a62667a6c4d8_initial_migration.py  ba3729d63ca3_initial_migration.py  ff6779c797e0_initial_migration.py
routers/: items.py  stock_price_volume.py  store_broker_data.py
routers/common/: app_endpoints.py  latency.py  ping.py
routers/data_ingest/: app_endpoints.py  get_broker_data.py  get_dataset_request.py
routers/data_store/: app_endpoints.py  asset_dataset_store.py  asset_market_activity_data.py  internal_asset_data.py  stock_market_activity_data.py  store_broker_data.py  store_dataset_request.py
schemas/: items.py  stock_market_activity_data.py  stock_price_volume.py  store_broker_data.py
schemas/common/: latency.py
schemas/data_ingest/: get_dataset_request.py
schemas/data_store/: asset_data_interface.py  asset_dataset_store.py  asset_market_activity_data.py  store_dataset_request.py
schemas/data_store/stock/: market_activity_data.py
