[project]
name = "trader-joe"
version = "0.1.0"
description = "FastAPI based algo trading platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
default-groups = ["base", "dev", "testing"]

[dependency-groups]
base = [
    "aenum>=3.1.15",
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "kafka-python-ng>=2.2.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.34.0",
]
dev = [
    "debugpy>=1.8.12",
    "ruff>=0.9.4",
]
testing = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
]
data-ingest = [
    "alpaca-py>=0.38.0",
]
data-store = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.37",
]

[tool.ruff]
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "data/store/migrations/versions/*",
]

line-length = 120
indent-width = 4

[tool.ruff.lint]
# select = ["E4", "E7", "E9", "F", "B", "C", "Q"]
extend-select = ["TC", "E501"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = false
# docstring-code-line-length = "dynamic"
