[project]
name = "trader-joe"
version = "0.1.0"
description = "FastAPI based algo trading platform"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = []

[tool.uv]
default-groups = ["base", "dev", "testing"]

[dependency-groups]
base = [
    "aenum>=3.1.16",
    # pin a safe minimum for starlette. Remove once fastapi update is available.
    "starlette>=0.47.2",
    "fastapi>=0.119.0", # revert to standard once semgrep issue resolved
    "httpx>=0.28.1",
    "kafka-python-ng>=2.2.3",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.37.0",
]
dev = [
    "debugpy>=1.8.17",
]
testing = [
    "ruff>=0.14.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
data-ingest = [
    "alpaca-py>=0.42.2",
]
data-store = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
]
security = [
    "bandit>=1.8.6",
    "pip-audit>=2.9.0",
    "safety>=3.6.2",
    "semgrep>=1.140.0",
]

[tool.ruff]
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "data/store/migrations/versions/*",
]

line-length = 120
indent-width = 4

[tool.ruff.lint]
# select = ["E4", "E7", "E9", "F", "B", "C", "Q"]
extend-select = ["TC", "E501"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = false
# docstring-code-line-length = "dynamic"
